--- a/jboa_web Maven Webapp/src/main/webapp/WEB-INF/web.xml
+++ b/jboa_web Maven Webapp/src/main/webapp/WEB-INF/web.xml
@@ -14,6 +14,9 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+	<listener>
+		<listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
+	</listener>
 	<filter>
 		<filter-name>SpringCharacterEncodingFilter</filter-name>
 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
