--- a/jboa_web Maven Webapp/src/main/webapp/WEB-INF/web.xml
+++ b/jboa_web Maven Webapp/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,7 @@
 	</welcome-file-list>
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:applicationContext-shiro.xml,classpath:applicationContext.xml,classpath:aop.xml,classpath:activiti-context.xml,classpath:email.xml</param-value>
+		<param-value>classpath:applicationContext-shiro.xml,classpath:applicationContext.xml,classpath:aop.xml,classpath:activiti-context.xml</param-value>
 	</context-param>
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
