--- a/jboa_parent/pom.xml
+++ b/jboa_parent/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.zx</groupId>
@@ -10,6 +11,7 @@
 		<module>../jboa_workflow</module>
 		<module>../jboa_core</module>
 		<module>../jboa_service</module>
+		<module>../jboa_redis</module>
 		<module>../jboa_lib</module>
 	</modules>
 </project>
