--- a/jboa_web Maven Webapp/src/main/webapp/WEB-INF/web.xml
+++ b/jboa_web Maven Webapp/src/main/webapp/WEB-INF/web.xml
@@ -3,9 +3,9 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
 	http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
-	<display-name></display-name>
+	<display-name>jboa_web</display-name>
 	<welcome-file-list>
-		<welcome-file>jsp/login.jsp</welcome-file>
+		<welcome-file>/jsp/login.jsp</welcome-file>
 	</welcome-file-list>
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
@@ -62,6 +62,7 @@
 			<param-value>true</param-value>
 		</init-param>
 	</filter>
+	
 	<filter-mapping>
 		<filter-name>shiroFilter</filter-name>
 		<url-pattern>/*</url-pattern>
